use HTML reset instead of JS

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </tr>
             </table>
             <div class="btn-group">
-                <button class="btn-clear">Borrar todo</button>
+                <button class="btn-clear" type="reset">Borrar todo</button>
             </div>
         </form>
         <script type="text/javascript" src="./main.js"></script>
