add a button to show errors

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 </tr>
             </table>
             <div class="btn-group">
-                <button class="btn-clear" type="reset">Borrar todo</button>
+                <button class="btn btn-check">Mostrar errores</button>
+                <button class="btn btn-clear" type="reset">Borrar todo</button>
             </div>
         </form>
         <script type="text/javascript" src="./main.js"></script>
