add clues section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     </td>
 
                     <td class="cell">
+                        <span class="word-number">2</span>
                         <input
                             class="letter"
                             type="text"
@@ -56,6 +57,16 @@
                 <button class="btn btn-clear" type="reset">Borrar todo</button>
             </div>
         </form>
+        <section class="clues">
+            <ul class="clues-across">
+                <strong>Horizontales</strong>
+                <li class="clue">1. Primera letra del abecedario (bis)</li>
+            </ul>
+            <ul class="clues-down">
+                <strong>Verticales</strong>
+                <li class="clue">2. Tipo de sangre</li>
+            </ul>
+        </section>
         <script type="text/javascript" src="./main.js"></script>
     </body>
 </html>
