add flow-writing for down words too

--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
                     </td>
                     <td class="cell cell-black" id="3"></td>
                     <td class="cell">
+                        <span class="word-number">5</span>
                         <input
                             class="letter"
                             type="text"
                             maxlength="1"
                             pattern="[Aa]"
                             id="4"
+                            data-down="5"
                         />
                     </td>
                 </tr>
@@ -62,12 +64,14 @@
                     </td>
 
                     <td class="cell">
+                        <span class="word-number">4</span>
                         <input
                             class="letter"
                             type="text"
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
+                            data-down="4"
                             id="7"
                         />
                     </td>
@@ -78,6 +82,7 @@
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
+                            data-down="5"
                             id="8"
                         />
                     </td>
@@ -92,6 +97,7 @@
                             maxlength="1"
                             pattern="[Aa]"
                             id="11"
+                            data-down="4"
                         />
                     </td>
                     <td class="cell">
@@ -101,6 +107,7 @@
                             maxlength="1"
                             pattern="[Aa]"
                             id="12"
+                            data-down="5"
                         />
                     </td>
                 </tr>
