--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             data-across="1"
@@ -27,6 +28,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             data-across="1"
@@ -40,6 +42,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="4"
@@ -55,6 +58,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Bb]"
                             data-across="3"
@@ -68,6 +72,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
@@ -79,6 +84,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
@@ -94,6 +100,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="11"
@@ -104,6 +111,7 @@
                         <input
                             class="letter"
                             type="text"
+                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="12"
