form autocomplete off

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <form>
+        <form autocomplete="off">
             <table class="crossword">
                 <tr class="row row-1">
                     <td class="cell">
@@ -15,7 +15,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             data-across="1"
@@ -28,7 +27,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             data-across="1"
@@ -42,7 +40,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="4"
@@ -58,7 +55,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Bb]"
                             data-across="3"
@@ -72,7 +68,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
@@ -84,7 +79,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Ee]"
                             data-across="3"
@@ -100,7 +94,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="11"
@@ -111,7 +104,6 @@
                         <input
                             class="letter"
                             type="text"
-                            autocomplete="off"
                             maxlength="1"
                             pattern="[Aa]"
                             id="12"
