put labels intead of spans

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <table class="crossword">
                 <tr class="row row-1">
                     <td class="cell">
-                        <span class="word-number">1</span>
+                        <label class="word-number" for="1">1</label>
                         <input
                             class="letter"
                             type="text"
@@ -23,7 +23,7 @@
                     </td>
 
                     <td class="cell">
-                        <span class="word-number">2</span>
+                        <label class="word-number" for="2">2</label>
                         <input
                             class="letter"
                             type="text"
@@ -36,7 +36,7 @@
                     </td>
                     <td class="cell cell-black" id="3"></td>
                     <td class="cell">
-                        <span class="word-number">5</span>
+                        <label class="word-number" for="4">5</label>
                         <input
                             class="letter"
                             type="text"
@@ -51,7 +51,7 @@
                 <tr class="row row-2">
                     <td class="cell cell-black" id="5"></td>
                     <td class="cell">
-                        <span class="word-number">3</span>
+                        <label class="word-number" for="6">3</label>
                         <input
                             class="letter"
                             type="text"
@@ -64,7 +64,7 @@
                     </td>
 
                     <td class="cell">
-                        <span class="word-number">4</span>
+                        <label class="word-number" for="7">4</label>
                         <input
                             class="letter"
                             type="text"
