use d.js library to improve performance

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <form autocomplete="off">
-            <table class="crossword">
+            <table class="table">
                 <tr class="row row-1">
                     <td class="cell">
                         <label class="word-number" for="1">1</label>
@@ -130,6 +130,7 @@
                 <li class="clue" data-down="2">2. Tipo de sangre</li>
             </ul>
         </section>
+        <script type="text/javascript" src="./d.js"></script>
         <script type="text/javascript" src="./main.js"></script>
     </body>
 </html>
