add solve button

--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,12 @@
                     </tr>
                 </table>
                 <div class="btn-group">
-                    <button class="btn btn-check">Mostrar errores</button>
+                    <button class="btn btn-check" type="button">
+                        Mostrar errores
+                    </button>
+                    <button class="btn btn-solve" type="button">
+                        Resolver todo
+                    </button>
                     <button class="btn btn-clear" type="reset">
                         Borrar todo
                     </button>
