add startgame function

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                                 pattern="[Mm]"
                                 data-across="1"
                                 data-down="1"
+                                required
                             />
                         </td>
                         <td class="cell">
@@ -43,6 +44,7 @@
                                 pattern="[Ee]"
                                 data-across="1"
                                 data-down="2"
+                                required
                             />
                         </td>
                         <td class="cell">
@@ -55,6 +57,7 @@
                                 pattern="[Ss]"
                                 data-across="1"
                                 data-down="3"
+                                required
                             />
                         </td>
                         <td class="cell cell-black" id="5"></td>
