add max-height to clues container and scrollIntoView

--- a/index.html
+++ b/index.html
@@ -1603,6 +1603,7 @@
                     </button>
                 </div>
             </form>
+            <p class="clues-p"></p>
             <section class="clues wrapper">
                 <ul class="clues-across">
                     <strong>Horizontales</strong>
