Paint clues from json

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 </p>
                 <button class="btn btn-share" type="button">Comparte</button>
             </dialog>
+            <section class="clues wrapper">
+                <ul class="clues-across"></ul>
+                <ul class="clues-down"></ul>
+            </section>
             <div class="form-panel">
                 <div class="timer">
                     <span class="minutes">00</span>:<span class="seconds"
@@ -1752,6 +1756,7 @@
                             </td>
                         </tr>
                     </table>
+                    <p class="clue-box"></p>
                     <div class="btn-group">
                         <button class="btn btn-check" type="button">
                             Mostrar errores
@@ -1765,212 +1770,6 @@
                     </div>
                 </form>
             </div>
-
-            <p class="clues-p"></p>
-            <section class="clues wrapper">
-                <ul class="clues-across">
-                    <strong>Horizontales</strong>
-                    <li class="clue" data-across="1">
-                        1. Cada una de las 12 partes de un año.
-                    </li>
-                    <li class="clue" data-across="4">
-                        4. Lugar de nacimiento del autor de este maravilloso
-                        cuadro.
-                    </li>
-                    <li class="clue" data-across="10">
-                        10. Movimiento anti-arte, pro-vandalismo, ultra-gamberro
-                        nacido a principios del siglo XX.
-                    </li>
-                    <li class="clue" data-across="11">
-                        11. Museo donde está este extraordinario cuadro.
-                    </li>
-                    <li class="clue" data-across="12">
-                        12. Yoko (…), artista conceptual perteneciente a Fluxus.
-                    </li>
-                    <li class="clue" data-across="13">
-                        13. Como no había competencia, lo que no le hace falta
-                        poner en el papel a Velázquez en este cuadro (ver
-                        esquina inferior derecha).
-                    </li>
-                    <li class="clue" data-across="14">
-                        14. Iniciales del artista y diseñador Pop ochentero que
-                        retrató a Joan Collins e hizo portadas para Duran Duran.
-                    </li>
-                    <li class="clue" data-across="15">15. Sudeste.</li>
-                    <li class="clue" data-across="16">
-                        16. Relativo a Minias, rey beocio.
-                    </li>
-                    <li class="clue" data-across="17">17. Reza.</li>
-                    <li class="clue" data-across="18">18. Teraesla.</li>
-                    <li class="clue" data-across="20">20. Negación.</li>
-                    <li class="clue" data-across="21">
-                        21. <em>(al revés)</em> Mujeres dementes.
-                    </li>
-                    <li class="clue" data-across="22">
-                        22. <em>(al revés)</em> Objeto simbólico que se entrega
-                        en el cuadro, que es el centro de la composición.
-                    </li>
-                    <li class="clue" data-across="24">
-                        24. Nombre de esta web.
-                    </li>
-                    <li class="clue" data-across="25">
-                        25. Ciudad que se rinde en este cuadro.
-                    </li>
-                    <li class="clue" data-across="26">26. Atreva.</li>
-                    <li class="clue" data-across="29">
-                        29. Cuerpo mineral formado por dos o más cristales
-                        asociados simétricamente.
-                    </li>
-                    <li class="clue" data-across="30">
-                        30. Velázquez no era tanto de esto, era más de mancha.
-                    </li>
-                    <li class="clue" data-across="32">
-                        32. Animal recién nacido.
-                    </li>
-                    <li class="clue" data-across="33">
-                        33. Para los historiadores del arte, lo que se apoya en
-                        las jambas.
-                    </li>
-                    <li class="clue" data-across="34">
-                        34. Acaricia ligeramente.
-                    </li>
-                    <li class="clue" data-across="36">
-                        36. Felipe (…), rey de España en la época y protector de
-                        Velázquez.
-                    </li>
-                    <li class="clue" data-across="37">
-                        37. Al revés, iniciales de doctora.
-                    </li>
-                    <li class="clue" data-across="38">
-                        38. Esbozar una obra de arte.
-                    </li>
-                    <li class="clue" data-across="41">41. Tercera letra.</li>
-                    <li class="clue" data-across="42">
-                        42. Iniciales del principal escultor neoclásico.
-                    </li>
-                    <li class="clue" data-across="43">
-                        43. Tipo de perspectiva del paisaje holandés que veis al
-                        fondo.
-                    </li>
-                    <li class="clue" data-across="45">
-                        45. Iniciales de ese escultor Pop que hace réplicas a
-                        gran escala de objetos cotidianos.
-                    </li>
-                    <li class="clue" data-across="46">
-                        46. Película de 1963 de Andy Warhol donde se ve a un
-                        tipo comiendo.
-                    </li>
-                    <li class="clue" data-across="48">
-                        48. Velazquez pintó a uno: Don Sebastian de Morra.
-                    </li>
-                    <li class="clue" data-across="49">
-                        49. <em>(al revés)</em> Pose en la que está el caballo
-                        de la derecha, típico recurso barroco para introducirnos
-                        en el cuadro.
-                    </li>
-                </ul>
-                <ul class="clues-down">
-                    <strong>Verticales</strong>
-                    <li class="clue" data-down="1">
-                        1. Este impresionista idolatraba a Velázquez.
-                    </li>
-                    <li class="clue" data-down="2">
-                        2. Periodo japonés en el que florecieron las artes e
-                        influyó significativamente en el arte moderno
-                        occidental.
-                    </li>
-                    <li class="clue" data-down="3">
-                        3. Iniciales de una de las más excelsas manieristas
-                        italianas.
-                    </li>
-                    <li class="clue" data-down="4">
-                        4. General vencedor (y de muy buen ganar) además de
-                        amigo del autor.
-                    </li>
-                    <li class="clue" data-down="5">
-                        5. Letra fuerte y capicúa.
-                    </li>
-                    <li class="clue" data-down="6">
-                        6. Nos dirigimos a ver este cuadro.
-                    </li>
-                    <li class="clue" data-down="7">
-                        7. Para tener un billete de vuelta nos hace falta uno de
-                        estos.
-                    </li>
-                    <li class="clue" data-down="8">
-                        8. Pronombre de la tercera persona en género masculino.
-                    </li>
-                    <li class="clue" data-down="9">
-                        9. <em>(al revés)</em> Según Ortega y Gasset, cada “uno
-                        de los elementos que forman la columna vertebral de todo
-                        este cuadro”.
-                    </li>
-                    <li class="clue" data-down="10">
-                        10. Años que duró la ciudad en manos españolas tras
-                        pintar Velázquez este cuadro.
-                    </li>
-                    <li class="clue" data-down="13">13. Persona muerta.</li>
-                    <li class="clue" data-down="14">
-                        14. Parte delantera de un barco.
-                    </li>
-                    <li class="clue" data-down="17">
-                        17. Años que duró el conflicto entre España y Holanda
-                        aquí representado.
-                    </li>
-                    <li class="clue" data-down="19">
-                        19. El ejército español de Flandes que vemos a la
-                        derecha.
-                    </li>
-                    <li class="clue" data-down="23">
-                        23. Aunque no estuvo en la batalla, pintor representado
-                        en el extremo derecho.
-                    </li>
-                    <li class="clue" data-down="25">
-                        25. Velázquez está en el podio de este movimiento
-                        artístico.
-                    </li>
-                    <li class="clue" data-down="26">
-                        26. Famoso Conde-Duque que apoyó a Velázquez en su
-                        carrera.
-                    </li>
-
-                    <li class="clue" data-down="27">
-                        27. Tres simples letras indican falta o carencia de
-                        alguna cosa.
-                    </li>
-                    <li class="clue" data-down="28">
-                        28. Dramaturgo que escribió sobre el hecho histórico que
-                        vemos en la imagen.
-                    </li>
-                    <li class="clue" data-down="29">
-                        29. Iniciales del más ilustre pintor Bielorruso.
-                    </li>
-                    <li class="clue" data-down="31">
-                        31. <em>(al revés)</em> Tiene convicciones religiosas.
-                    </li>
-                    <li class="clue" data-down="33">
-                        33. Pronuncié unas palabras.
-                    </li>
-                    <li class="clue" data-down="35">35. Oro.</li>
-                    <li class="clue" data-down="38">
-                        38. Dios pintado por Velázquez en “Los borrachos”.
-                    </li>
-                    <li class="clue" data-down="39">
-                        39. El hijo de Fidipo y padre del heraclida Tésalo.
-                    </li>
-                    <li class="clue" data-down="40">
-                        40. Nombre de Pila de Magritte.
-                    </li>
-                    <li class="clue" data-down="44">
-                        44. Iniciales de nuestra impresionista danesa preferida.
-                    </li>
-                    <li class="clue" data-down="47">
-                        47. Iniciales del impresionista que nos regaló “El
-                        almuerzo de los remeros”, más de Rubens que de
-                        Velázquez.
-                    </li>
-                </ul>
-            </section>
         </main>
         <script src="assets/polyfill/dialog-polyfill.js"></script>
         <script type="text/javascript" src="./main.js"></script>
