fade crossword color, add image, delete references to clues in js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 possimus odio.
             </p>
         </header>
+        <section class="hero"></section>
         <main class="main">
             <dialog class="dialog">
                 <button class="dialog-close-btn">
@@ -1752,7 +1753,9 @@
                             </td>
                         </tr>
                     </table>
-                    <p class="clue-box"></p>
+                    <div>
+                        <p class="clue-box"></p>
+                    </div>
                     <div class="btn-group">
                         <button class="btn btn-check" type="button">
                             Mostrar errores
