add function to share on twitter

--- a/index.html
+++ b/index.html
@@ -31,19 +31,21 @@
                         alt="cerrar ventana"
                     />
                 </button>
-                <h1 class="dialog-title">¡Enhorabuena! <br /></h1>
-                <p class="dialog-text">
-                    <strong>
-                        Has completado el crucigrama con nivel
-                        <br />
-                        <span class="score"
-                            >🔑 llavero de la tienda de regalos</span
-                        >
-                        <br />
-                        ¡Comparte tu resultado en Twitter!:</strong
+                <h1 class="dialog-title">¡Enhorabuena!<br /></h1>
+                <span class="dialog-text"
+                    >Has completado el crucigrama con nivel:</span
+                >
+                <span class="score">🔑 Llavero de la tienda de regalos</span>
+                <p class="score-text">
+                    <i
+                        >No acostumbras poner los pies en un museo, pero con
+                        este souvenir ¡das el pego!</i
                     >
                 </p>
-                <button class="btn btn-share" type="button">Comparte</button>
+                <span class="dialog-share"
+                    >¡Comparte tu resultado en Twitter!</span
+                >
+                <a class="btn btn-share" href="" target="_blank">Comparte</a>
             </dialog>
             <div class="form-panel">
                 <div class="timer">
@@ -1753,10 +1755,8 @@
                             </td>
                         </tr>
                     </table>
-                    <div>
-                        <p class="clue-box"></p>
-                    </div>
-                    <div class="btn-group">
+                    <p class="clue-box"></p>
+                    <div class="btn-group wrapper">
                         <button class="btn btn-check" type="button">
                             Mostrar errores
                         </button>
