add score levels and texts

--- a/index.html
+++ b/index.html
@@ -33,15 +33,10 @@
                 </button>
                 <h1 class="dialog-title">¡Enhorabuena!<br /></h1>
                 <span class="dialog-text"
-                    >Has completado el crucigrama con nivel:</span
+                    >Has completado el crucigrama con nivel</span
                 >
-                <span class="score">🔑 Llavero de la tienda de regalos</span>
-                <p class="score-text">
-                    <i
-                        >No acostumbras poner los pies en un museo, pero con
-                        este souvenir ¡das el pego!</i
-                    >
-                </p>
+                <span class="score"></span>
+                <p class="score-text"></p>
                 <span class="dialog-share"
                     >¡Comparte tu resultado en Twitter!</span
                 >
