avoid tooltip messages in table

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 >
                 <a class="btn btn-share" href="" target="_blank">Comparte</a>
             </dialog>
-            <form class="form" autocomplete="off" method="post">
+            <form class="form" autocomplete="off" method="post" novalidate>
                 <div class="timer">
                     <span class="minutes">00</span>:<span class="seconds"
                         >00</span
