--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Un crucigrama sobre Historia del Arte creado con vanilla javascript"
+        />
         <title>Crucigrama HA!</title>
         <link
             rel="stylesheet"
